# ChatImageClassifier

./: .gitignore  LICENSE  README.md  docker-compose.yaml  prompts.yaml  pyproject.toml
.github/workflows/: python-app.yml
docker/: Dockerfile
docs/: DesignDoc.md
src/config/: __init__.py  config.py  logger_setup.py  types.py
src/models/: easyocr_gpt_classifier.py
src/models/gpt_vision_classifier/: __init__.py  gpt_vision_classifier.py
src/models/ocr_gpt_classifier/: __init__.py  classify_text_model.py  ocr_model.py  predict.py  types.py
src/streamlit_app/: app.py
