[tool.poetry]
name = "test-vibe"
version = "0.1.0"
description = ""
authors = ["Kirill <litvinka@my.msu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
python-dotenv = "^1.0.1"
easyocr = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
